--- a/ventures-soft/angular.json
+++ b/ventures-soft/angular.json
@@ -34,8 +34,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/global.scss",
-              "src/styles/material-theme.scss"
+              "src/global.scss"
             ],
             "scripts": []
           },
